fix: add classname for icon and align the icon

--- a/src/components/UI/organism/JobDetails/children/JobDetailsSummary/JobDetailsSummary.module.scss
+++ b/src/components/UI/organism/JobDetails/children/JobDetailsSummary/JobDetailsSummary.module.scss
@@ -20,4 +20,8 @@
     color: tokens.$color-grey-800;
     font-size: tokens.$text-md;
   }
+
+  &__icon {
+    align-self: flex-start;
+  }
 }
